--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,48 @@ body {
 
 html,
 body,
-#__next{
+#__next,
+main {
   height: 100vh;
   width: 100vw;
+}
+
+.weather-view-grid {
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+  gap: 1rem;
+}
+
+.weather-for-today {
+  font-size: 30px;
+  border: 1px solid brown;
+}
+
+.weather-for-dates {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  overflow-x: auto;
+  background-color: white;
+  padding: 40px;
+  border-radius: 10px;
+  border: 1px solid red;
+}
+
+.weather-for-date {
+  padding: 0 5px;
+  min-width: 80px;
+  width: auto;
+  border: 1px solid gray;
+}
+
+.weather-sunrise-sunset {
+  border: 1px solid blue;
+}
+
+.weather-forecast {
+  border: 1px solid green;
 }
